--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,9 @@
 
 .App{
-  background-color: rgb(191, 195, 195);
+  background-color: rgb(246, 229, 229);
+  box-sizing: border-box;
 }
-.App p{
+.header-content{
   display: inline-block;
   transform: translateX(-50%);
   position: absolute;
@@ -11,4 +12,15 @@
   padding: 5px 20px;
   background-color: rgb(255, 255, 255);
   box-shadow: 0 0  8px black;
+}
+.cart-container{
+  grid-template-columns: 4fr 1fr;
+  overflow: hidden;
+}
+.cart-section{
+  display: grid;
+  grid-template-columns: repeat(3,1fr);
+  margin: 110px 50px;
+  overflow: hidden;
+  z-index: 0.01;
 }
