--- a/src/App.css
+++ b/src/App.css
@@ -24,3 +24,9 @@
   overflow: hidden;
   z-index: 0.01;
 }
+.order-container{
+  width: 98%;
+  height: 600px;
+  border: 1px saddlebrown solid;
+
+}
