--- a/src/App.css
+++ b/src/App.css
@@ -27,6 +27,15 @@
 .order-container{
   width: 98%;
   height: 600px;
-  border: 1px saddlebrown solid;
-
+  position: fixed;
+  margin-top: 10px;
+  box-shadow: rgba(60, 64, 67, 0.4) 0px 1px 2px 0px, rgba(60, 64, 67, 0.5) 0px 2px 6px 2px;
+  border-radius: 20px;
+  margin-right: 10px;
+  background-color:rgb(246, 229, 229);
+}
+.button-div{
+  margin: 30px 70px;
+  position: absolute;
+  bottom: 110px;
 }
