--- a/src/Summary/Summary.css
+++ b/src/Summary/Summary.css
@@ -1,5 +1,11 @@
-/* .order-container{
-     width: 95%;
-     height: 500px;
-     border: 1px solid black;
-} */
+.selected-cart{
+    padding: 6px;
+    text-align: center;
+    text-transform:lowercase;
+     box-shadow: rgba(50, 50, 93, 0.3) 0px 6px 12px -2px, rgba(0, 0, 0, 0.5) 0px 3px 7px -3px;
+     border-radius: 20px;
+}
+.deleteIcon {
+     margin-left: 100px;
+     margin-top: 10px;
+}
