--- a/src/components/Cart/Cart.css
+++ b/src/components/Cart/Cart.css
@@ -6,8 +6,13 @@
      background-color: rgb(255, 255, 255);
      box-shadow: rgba(0, 0, 0, 0.3) 0px 19px 38px, rgba(0, 0, 0, 0.22) 0px 15px 12px;
      position: relative;
-
 }
+@media screen and (max-width:600px) and (min-width:350px){
+     .cart{
+          width: 98%;
+     }
+}
+
 .cart button{
      background-color: #c2fbd7;
      border: 0;
